--- a/reviews/templates/reviews/sortByScore.html
+++ b/reviews/templates/reviews/sortByScore.html
@@ -11,7 +11,7 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/blog/">
 
-    
+
 
     <!-- Bootstrap core CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -32,7 +32,7 @@
       }
     </style>
 
-    
+
     <!-- Custom styles for this template -->
     <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
     <!-- Custom styles for this template -->
@@ -89,13 +89,6 @@
     </div>
   </div>
 
-  <form action='sortByScore'>
-    <input type='submit' value='Sort By User Score' class="btn btn-primary">
-  </form>
-
-
-  <br>
-
 
   <div class="row mb-2">
     {% for review in page.object_list %}
@@ -128,7 +121,7 @@
   <ul class="pagination">
     {% if page.has_previous %}
     <li class="page-item">
-      <a class="page-link" href="{% url 'home' %}?page={{ page.previous_page_number }}">Previous</a>
+      <a class="page-link" href="{% url 'sortByScore' %}?page={{ page.previous_page_number }}">Previous</a>
     </li>
     {% endif %}
     <li class="page-item active" aria-current="page">
@@ -136,7 +129,7 @@
     </li>
     {% if page.has_next %}
     <li class="page-item">
-      <a class="page-link" href="{% url 'home' %}?page={{ page.next_page_number }}">Next</a>
+      <a class="page-link" href="{% url 'sortByScore' %}?page={{ page.next_page_number }}">Next</a>
     </li>
     {% endif %}
   </ul>
@@ -153,6 +146,6 @@
 </footer>
 
 
-    
+
   </body>
 </html>
