--- a/reviews/templates/reviews/rate.html
+++ b/reviews/templates/reviews/rate.html
@@ -132,6 +132,43 @@
 
 
 </div>
+<div class="col-md-8">
+<h1> Reviews </h1>
+
+<div class="container mt-3 mb-5">
+<p>Add a Review!</p>
+        <div class="d-flex justify-content-center row" mt-2>
+                <div class="coment-bottom bg-white p-2 px-4">
+
+                    <form method="POST">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="username">Username</label>
+                    <input type="text" name="username" class="form-control" id="username" required>
+                </div>
+                <div class="form-group">
+                    <label for="review">Review</label>
+                    <textarea name="review" class="form-control" id="review" ></textarea>
+                </div><br>
+                <input type="submit" name="reviewbtn" value="Submit" class="btn btn-primary">
+                <br>
+            </form>
+
+</div>
+      {% for comment in comments %}
+
+            <div class="commented-section mt-3 mb-3">
+                <div class="d-flex flex-row align-items-center commented-user">
+                    <h5 class="mr-2"><font color="blue">{{ comment.username }}</font></h5><span class="dot mb-1"></span><span class="mb-1 ml-2"> &nbsp;&nbsp; {{ comment.date }}</span></div>
+                <div class="comment-text-sm"><span>{{ comment.review }}</span></div>
+            </div>
+
+          {% endfor %}
+    </div>
+    </div>
+    </div>
+    </div>
+
 
 
 </main>
